<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:layout_marginTop="?actionBarSize">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/input_phone"
        android:textColor="@color/colorControlNormal"
        android:textSize="24sp"
        tools:text="请输入你的手机号" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/select_country_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:drawableRight="@drawable/enter"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:textAlignment="gravity"
        android:textSize="18sp"
        tools:text="中国 +86" />

    <include
        android:id="@+id/select_country_tv_bg"
        layout="@layout/login_edittext_background" />

    <com.tomeokin.lspush.widget.ClearEditText
        android:id="@+id/input_phone_editText"
        style="@style/ClearEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textSize="18sp"
        tools:text="手机号" />

    <include
        android:id="@+id/input_phone_bg"
        layout="@layout/login_edittext_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.tomeokin.lspush.widget.ClearEditText
            android:id="@+id/input_captcha_editText"
            style="@style/ClearEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/sms_captcha"
            android:inputType="number"
            android:textSize="18sp"
            tools:text="短信验证码" />

        <TextView
            android:id="@+id/obtain_captcha_btn"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:enabled="true"
            android:gravity="center"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/obtain_captcha"
            android:textColor="@color/submit_button_text_light"
            android:textSize="18sp"
            tools:text="获取验证码" />

    </LinearLayout>

    <include
        android:id="@+id/obtain_captcha_bg"
        layout="@layout/login_edittext_background" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:id="@+id/submit_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/submit_button_background"
        android:enabled="false"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/submit_next"
        android:textColor="@color/submit_button_text"
        android:textSize="18sp"
        tools:text="继续" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/using_existing_account_to_login"
        android:textColor="@color/submit_button_text_light" />

</LinearLayout>