<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:layout_marginTop="?actionBarSize">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/avatar_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        tools:src="@drawable/avatar_big" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.tomeokin.lspush.widget.ClearEditText
        android:id="@+id/input_userName_editText"
        style="@style/ClearEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:inputType="textNoSuggestions"
        android:textSize="18sp"
        tools:hint="用户名" />

    <include
        android:id="@+id/input_phone_bg"
        layout="@layout/login_edittext_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <com.tomeokin.lspush.widget.ClearEditText
            android:id="@+id/input_password_editText"
            style="@style/ClearEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            tools:text="12345678" />

        <android.support.design.widget.CheckableImageButton
            android:id="@+id/password_toggle"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/password_toggle"
            android:padding="8dp" />

    </LinearLayout>

    <include
        android:id="@+id/input_password_bg"
        layout="@layout/login_edittext_background" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:id="@+id/submit_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/submit_button_background"
        android:enabled="false"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/submit_register"
        android:textColor="@color/submit_button_text"
        android:textSize="18sp"
        tools:text="注册" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/goto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/using_existing_account_to_login"
        android:textColor="@color/submit_button_text_light"
        tools:text="使用已有账号登录" />

</LinearLayout>