<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginLeft="8dp"
                android:padding="8dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:textColor="@color/colorControlNormal"
                    android:textSize="16sp"
                    tools:text="Abc" />

                <TextView
                    android:id="@+id/user_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:text="@string/no_description"
                    android:textColor="@color/blue_gray_50"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:id="@+id/following_count_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="@color/blue_4_whiteout"
                    android:textSize="16sp"
                    tools:text="65" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/following"
                    android:textColor="@color/colorControlNormal"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/followers_count_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="56dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followers_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textColor="@color/blue_4_whiteout"
                    android:textSize="16sp"
                    tools:text="96" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/followers"
                    android:textColor="@color/colorControlNormal"
                    android:textSize="12sp" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/follow_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:background="?selectableItemBackground"
                android:padding="8dp"
                android:text="@string/follow"
                android:textColor="@color/blue_5_whiteout"
                android:textSize="16sp"
                tools:textColor="@color/blue_gray_30" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/grey_98" />

        <RelativeLayout
            android:id="@+id/share_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/share_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:padding="8dp"
                android:textColor="@color/blue_gray_30"
                android:textSize="14sp"
                tools:text="65" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@id/share_count_tv"
                android:padding="8dp"
                android:text="@string/share_desc"
                android:textColor="@color/colorControlNormal"
                android:textSize="14sp" />

        </RelativeLayout>

        <include layout="@layout/layout_divider" />

        <RelativeLayout
            android:id="@+id/favor_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:gravity="center_vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/favor_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:padding="8dp"
                android:textColor="@color/blue_gray_30"
                android:textSize="14sp"
                tools:text="96" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@id/favor_count_tv"
                android:padding="8dp"
                android:text="@string/favor_desc"
                android:textColor="@color/colorControlNormal"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:background="@color/grey_98" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/collect_hot_share"
            android:textColor="@color/colorControlNormal"
            android:textSize="14sp" />

        <include layout="@layout/layout_divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hot_share_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false" />

    </LinearLayout>

</ScrollView>